# ros2_ws

./: .gitignore  frames_2024-07-15_12.51.27.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/examples_rclcpp_async_client/lib/examples_rclcpp_async_client/: client_main
install/examples_rclcpp_async_client/share/examples_rclcpp_async_client/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/examples_rclcpp_cbg_executor/include/examples_rclcpp_cbg_executor/: ping_node.hpp  (+1 more)
log/: latest_build  latest_list  latest_test
src/robot_pkg/: CMakeLists.txt  package.xml
src/robot_pkg/install/: local_setup.sh  setup.sh
src/robot_pkg/install/robot_pkg/share/robot_pkg/: package.sh
src/robot_pkg/install/robot_pkg/share/robot_pkg/config/: joint_names_description.yaml
src/robot_pkg/install/robot_pkg/share/robot_pkg/launch/: robot.launch.py
src/robot_pkg/install/robot_pkg/share/robot_pkg/meshes/: FL_caster.STL  FR_caster.STL  RL_wheel.STL  RR_caster.STL  Right_wheel.STL
src/robot_pkg/install/robot_pkg/share/robot_pkg/urdf/: .~lock.description.csv#  description.csv  description.urdf
src/robot_pkg/launch/: robot.launch.py
src/robot_pkg/log/: latest_build
src/robot_pkg/meshes/: FR_Caster.stl  Right_wheel.stl  base_link_collision.stl  wheel_collision.stl
src/robot_pkg/rviz/: rviz_basic_settings.rviz
src/robot_pkg/urdf/: Model.csv  Model.urdf  Model.urdf.xacro  robot_controller.xacro
src/robot_pkg/worlds/: hello.world  model.sdf
src/robot_pkg/worlds/indoor.world/: model.config
(+213 files in other folders)
